--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,13 +17,20 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    strategy:
+      matrix:
+        version: [18, 20]
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.version }}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
