--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.version }}  
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
