--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,7 @@ jobs:
   build:
     strategy:
       matrix:
+        os: [ubuntu-22.04, ubuntu-20.04]
         version: [18, 20]
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
