--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,11 @@ jobs:
           node-version: ${{ matrix.version }}
       - uses: actions/checkout@v3
       - name: Run a one-line script
-        run: env
+        run: ${{ toJson(context) }}
+      - name: Run a one-line script
+        run: ${{ toJson(github) }}  
+      - name: Run a one-line script
+        run: ${{ toJson(matrix) }}    
   result:
     runs-on: ubuntu-22.04
     steps:
