--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run a one-line script
         env:
           MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"  
+        run: echo "oss=${{matrix.os}}" >> $GITHUB_OUTPUT
   result:
     runs-on: ubuntu-22.04
     steps:
@@ -41,6 +41,6 @@ jobs:
         run: echo Hello, world!
       - name: Display context
         env:
-          JOBS_CONTEXT: ${{ toJson(jobs) }}
-        run: echo "$JOBS_CONTEXT"
+          NEEDS_CONTEXT: ${{ toJson(needs) }}
+        run: echo "$NEEDS_CONTEXT"
     needs: [build]
