--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+  test:
+    - run: echo "test=boum" >> $GITHUB_OUTPUT
   build:
     strategy:
       matrix:
@@ -31,16 +33,18 @@ jobs:
           node-version: ${{ matrix.version }}
       - uses: actions/checkout@v3
       - name: Run a one-line script
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
         run: echo "oss=${{matrix.os}}" >> $GITHUB_OUTPUT
   result:
     runs-on: ubuntu-22.04
+    needs: [build,test]
     steps:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Display context
         env:
-          NEEDS_CONTEXT: ${{ toJson(needs) }}
+          NEEDS_CONTEXT: ${{ toJson(needs.build) }}
         run: echo "$NEEDS_CONTEXT"
-    needs: [build]
+      - name: Display context
+        env:
+          NEEDS_CONTEXT: ${{ toJson(needs.test) }}
+        run: echo "$NEEDS_CONTEXT"
