--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
       output1: ${{ steps.buildstep.outputs.oss }}    
   result:
     runs-on: ubuntu-22.04
-    needs: [build,test]
+    needs: [build]
     if: 1 == 2
     steps:
       - name: Run a one-line script
@@ -59,7 +59,7 @@ jobs:
         run: echo "$NEEDS_CONTEXT"
   afterSkip:
     runs-on: ubuntu-22.04
-    needs: [result,build]
+    needs: [result,test]
     steps:
       - name: Run a one-line script
         run: echo Hello, world!
