--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,58 +15,20 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  test:
+  init:
     runs-on: ubuntu-22.04
+    continue-on-error: true
     steps:
-      - run: echo "test=boum" >> $GITHUB_OUTPUT
-        id: step1
-    outputs:
-      output1: ${{ steps.step1.outputs.test }} 
+      - run: exit 1
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-22.04, ubuntu-20.04]
-        version: [18, 20]
-    # The type of runner that the job will run on
-    runs-on: ${{ matrix.os }}
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-22.04
+    needs: [init]
     steps:
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.version }}
-      - uses: actions/checkout@v3
       - name: Run a one-line script
-        run: echo "oss=${{matrix.os}}" >> $GITHUB_OUTPUT
-        id: buildstep
-    outputs:
-      output1: ${{ steps.buildstep.outputs.oss }}    
+        run: echo "coucou"
   result:
     runs-on: ubuntu-22.04
     needs: [build]
-    if: 1 == 2
     steps:
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Display context
-        env:
-          NEEDS_CONTEXT: ${{ toJson(needs.build) }}
-        run: echo "$NEEDS_CONTEXT"
-      - name: Display context
-        env:
-          NEEDS_CONTEXT: ${{ toJson(needs.test) }}
-        run: echo "$NEEDS_CONTEXT"
-  afterSkip:
-    runs-on: ubuntu-22.04
-    needs: [result,test]
-    if: always()
-    steps:
-      - name: Run a one-line script
-        run: echo Hello, world!
-  last:
-    runs-on: ubuntu-22.04
-    needs: [afterSkip]
-    if: success()
-    steps:
-      - run: echo End 
