--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
   result:
     runs-on: ubuntu-22.04
     needs: [build]
-    if: $${{failure() && success()}}
+    if: $${{success()}}
     env: 
       CTX: ${{toJson(needs)}}
     steps:
