--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -25,8 +25,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: exit 1
-        continue-on-error: true
       - name: Run a one-line script
         run: echo "toto" 
+        if: always()
       - name: Run a one-line script
         run: echo "tata"     
