--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  init2:
+    runs-on: ubuntu-22.04
+    steps:
+      - run: echo "bonjour"
   init:
     runs-on: ubuntu-22.04
     continue-on-error: true
