--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "${{ env.ENV_VAR}} - ${{ env.ENV_SECRET}}"
+      - run: echo "${ENV_VAR} - ${ENV_SECRET}"
       - id: foo
         uses: sguiheux/hello-world-composite-action@v1
         with:
