--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "${{ vars.ENV_VAR}} - ${{ secrets.ENV_SECRET}}"
       - id: foo
-        uses: sguiheux/hello-world-composite-action@v2
+        uses: sguiheux/hello-world-composite-action@v3
         with:
           who-to-greet: 'Mona the Octocat'
+          variables: ${{ vars }}
+          secrets: ${{ secrets }}
       - run: echo random-number "$RANDOM_NUMBER"
         shell: bash
         env:
