--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         id: checkout
-      - run: echo "${{ vars.ENV_VAR}} - ${{ secrets.ENV_SECRET}}" >> $GITHUB_OUTPUT
+      - run: echo "MYOUTPUT=${{ vars.ENV_VAR}}" >> $GITHUB_OUTPUT
         id: poupou
       - name: Display github context
         run: |
