--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         id: checkout
-      - run: echo "MYOUTPUT=${{ vars.ENV_VAR}}" >> $GITHUB_OUTPUT
+      - run: echo "MYOUTPUT=${{ vars.ENV_VAR}}" >> $GITHUB_OUTPUT 
         id: poupou
       - name: Display github context
         run: |
@@ -27,6 +27,7 @@ jobs:
         with:
           who-to-greet: 'Mona the Octocat'
           variables: ${{ env.GITHUB }}
+          event: ${{ github.event }}
         env:
           GITHUB: ${{ toJson(vars) }}
       - run: echo random-number "$RANDOM_NUMBER"
