--- a/.cds/worker-models/buildpack-deps-buster.yml
+++ b/.cds/worker-models/buildpack-deps-buster.yml
@@ -1,7 +1,6 @@
 name: buildpack-deps-buster
 description: my debian buster worker model
 type: docker
+osarch: linux/amd64
 spec:
   image: buildpack-deps:buster
-  cmd: curl {{.API}}/download/worker/linux/$(uname -m) -o worker && chmod +x worker && exec ./worker
-  shell: sh -c
